--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio </title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Theophilus | Portfolio</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-    </header>
-    <section>
-        <h2>About me</h2>
-        <p>This is where i introduce myself</p>
-    </section>
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>Project1 - Description</li>
-            <li>Project 2 - Description</li>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Theophilus</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
-    </section>
-    <footer>
-        <p>Contact me at <a href="mailto:adeniranolarewaju4@gmail.com">adeniranolarewaju4@gmail.com</a></p>
-    </footer>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <header class="container text-center mt-5">
+    <h1 class="display-4">Hello, I'm <span class="text-primary">Theophilus</span> 👋</h1>
+    <p class="lead">A passionate developer crafting modern web experiences.</p>
+    <a href="#projects" class="btn btn-primary mt-3">View My Work</a>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="container mt-5">
+    <h2>About Me</h2>
+    <p>
+      I'm a web developer with a love for building beautiful and functional websites. I enjoy learning new technologies and turning ideas into reality through code.
+    </p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="container mt-5">
+    <h2>Projects</h2>
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title">Project One</h5>
+            <p class="card-text">A brief description of your project goes here.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Add more project cards as needed -->
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="container mt-5 mb-5">
+    <h2>Contact</h2>
+    <p>Feel free to reach out via <a href="mailto:your.email@example.com">email</a> or connect with me on <a href="#">LinkedIn</a>.</p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-light text-center py-3">
+    <small>&copy; 2025 Theophilus. All rights reserved.</small>
+  </footer>
+
+  <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
