--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -60,7 +60,7 @@
   <!-- Contact Section -->
   <section id="contact" class="container mt-5 mb-5">
     <h2>Contact</h2>
-    <p>Feel free to reach out via <a href="mailto:your.email@example.com">email</a> or connect with me on <a href="#">LinkedIn</a>.</p>
+    <p>Feel free to reach out via <a href="mailto:adeniranolarewaju4@gmail.com">email</a> or connect with me on <a href="#">LinkedIn</a>.</p>
   </section>
 
   <!-- Footer -->
