--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -6,6 +6,7 @@
   <title>Theophilus | Portfolio</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <!-- Navigation Bar -->
@@ -28,6 +29,7 @@
 
   <!-- Hero Section -->
   <header class="container text-center mt-5">
+    <img src="https://avatars.githubusercontent.com/u/99167844?v=4" alt="Theophilus profile photo" class="rounded-circle shadow mb-3" width="140" height="140">
     <h1 class="display-4">Hello, I'm <span class="text-primary">Theophilus</span> 👋</h1>
     <p class="lead">A passionate developer crafting modern web experiences.</p>
     <a href="#projects" class="btn btn-primary mt-3">View My Work</a>
@@ -39,6 +41,15 @@
     <p>
       I'm a web developer with a love for building beautiful and functional websites. I enjoy learning new technologies and turning ideas into reality through code.
     </p>
+    <h5 class="mt-4">Skills</h5>
+    <ul class="list-inline">
+      <li class="list-inline-item badge bg-primary text-white m-1">HTML</li>
+      <li class="list-inline-item badge bg-primary text-white m-1">CSS</li>
+      <li class="list-inline-item badge bg-primary text-white m-1">JavaScript</li>
+      <li class="list-inline-item badge bg-primary text-white m-1">Bootstrap</li>
+      <li class="list-inline-item badge bg-primary text-white m-1">React</li>
+      <li class="list-inline-item badge bg-primary text-white m-1">Git</li>
+    </ul>
   </section>
 
   <!-- Projects Section -->
@@ -47,20 +58,51 @@
     <div class="row">
       <div class="col-md-4 mb-4">
         <div class="card h-100">
+          <img src="https://source.unsplash.com/400x200/?website,code" class="card-img-top" alt="Project One Screenshot">
           <div class="card-body">
             <h5 class="card-title">Project One</h5>
             <p class="card-text">A brief description of your project goes here.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
           </div>
         </div>
       </div>
-      <!-- Add more project cards as needed -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="https://source.unsplash.com/400x200/?app,development" class="card-img-top" alt="Project Two Screenshot">
+          <div class="card-body">
+            <h5 class="card-title">Project Two</h5>
+            <p class="card-text">Another project description goes here.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="https://source.unsplash.com/400x200/?portfolio,design" class="card-img-top" alt="Project Three Screenshot">
+          <div class="card-body">
+            <h5 class="card-title">Project Three</h5>
+            <p class="card-text">A third project description goes here.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" class="container mt-5 mb-5">
     <h2>Contact</h2>
-    <p>Feel free to reach out via <a href="mailto:adeniranolarewaju4@gmail.com">email</a> or connect with me on <a href="#">LinkedIn</a>.</p>
+    <p>
+      Feel free to reach out via
+      <a href="mailto:adeniranolarewaju4@gmail.com"><i class="fa-solid fa-envelope"></i> Email</a>
+      or connect with me on
+      <a href="https://www.linkedin.com/in/theophilus00/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>.
+    </p>
+    <div>
+      <a href="https://github.com/Theophilus00" target="_blank" class="text-dark fs-3 me-3" aria-label="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com/" target="_blank" class="text-primary fs-3 me-3" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/theophilus00/" target="_blank" class="text-primary fs-3" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    </div>
   </section>
 
   <!-- Footer -->
